--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+
+default = []
+2d-array-indexing = []
+C-style-indexing = []
+unsafe-indexing = []
+
 [dependencies]
